--- a/Muhasebe/Muhasebe.csproj
+++ b/Muhasebe/Muhasebe.csproj
@@ -70,14 +70,6 @@
     <Reference Include="Microsoft.ReportViewer.WinForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="Microsoft.VisualBasic.PowerPacks.Vs, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
-    <Reference Include="MySql.Data, Version=6.8.1.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\MySQL\MySQL Connector Net 6.8.1\Assemblies\v4.5\MySql.Data.dll</HintPath>
-    </Reference>
-    <Reference Include="MySql.Data.Entity.EF6, Version=6.8.1.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\MySQL\MySQL Connector Net 6.8.1\Assemblies\v4.5\MySql.Data.Entity.EF6.dll</HintPath>
-    </Reference>
     <Reference Include="RawInput, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>bin\Debug\RawInput.dll</HintPath>
@@ -174,13 +166,13 @@
     <Compile Include="BarcodeListener.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Company.cs">
-      <DependentUpon>Context.tt</DependentUpon>
+      <DependentUpon>Muhasebe.tt</DependentUpon>
     </Compile>
     <Compile Include="Device.cs">
-      <DependentUpon>Context.tt</DependentUpon>
+      <DependentUpon>Muhasebe.tt</DependentUpon>
     </Compile>
     <Compile Include="DeviceType.cs">
-      <DependentUpon>Context.tt</DependentUpon>
+      <DependentUpon>Muhasebe.tt</DependentUpon>
     </Compile>
     <Compile Include="Edit_Inventory_Pop.cs">
       <SubType>Form</SubType>
@@ -209,21 +201,6 @@
     </Compile>
     <Compile Include="Custom\User.partial.cs" />
     <Compile Include="DeviceManager.cs" />
-    <Compile Include="Context.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Context.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Context.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Context.edmx</DependentUpon>
-    </Compile>
     <Compile Include="Edit_Device_Pop.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -261,40 +238,41 @@
       <DependentUpon>Edit_User_Pop.cs</DependentUpon>
     </Compile>
     <Compile Include="Event.cs">
-      <DependentUpon>Context.tt</DependentUpon>
+      <DependentUpon>Muhasebe.tt</DependentUpon>
     </Compile>
     <Compile Include="EventCategory.cs">
-      <DependentUpon>Context.tt</DependentUpon>
+      <DependentUpon>Muhasebe.tt</DependentUpon>
     </Compile>
     <Compile Include="Events\EventArgs.cs" />
     <Compile Include="Events\EventHandlers.cs" />
     <Compile Include="Events\EventSink.cs" />
     <Compile Include="Expenditure.cs">
-      <DependentUpon>Context.tt</DependentUpon>
+      <DependentUpon>Muhasebe.tt</DependentUpon>
     </Compile>
     <Compile Include="ExpenditureType.cs">
-      <DependentUpon>Context.tt</DependentUpon>
+      <DependentUpon>Muhasebe.tt</DependentUpon>
     </Compile>
+    <Compile Include="Franchise.cs" />
     <Compile Include="Income.cs">
-      <DependentUpon>Context.tt</DependentUpon>
+      <DependentUpon>Muhasebe.tt</DependentUpon>
     </Compile>
     <Compile Include="IncomeType.cs">
-      <DependentUpon>Context.tt</DependentUpon>
+      <DependentUpon>Muhasebe.tt</DependentUpon>
     </Compile>
     <Compile Include="Inventory.cs">
-      <DependentUpon>Context.tt</DependentUpon>
+      <DependentUpon>Muhasebe.tt</DependentUpon>
     </Compile>
     <Compile Include="Invoice.cs">
-      <DependentUpon>Context.tt</DependentUpon>
+      <DependentUpon>Muhasebe.tt</DependentUpon>
     </Compile>
     <Compile Include="InvoiceNode.cs">
-      <DependentUpon>Context.tt</DependentUpon>
+      <DependentUpon>Muhasebe.tt</DependentUpon>
     </Compile>
     <Compile Include="Item.cs">
-      <DependentUpon>Context.tt</DependentUpon>
+      <DependentUpon>Muhasebe.tt</DependentUpon>
     </Compile>
     <Compile Include="JobPosition.cs">
-      <DependentUpon>Context.tt</DependentUpon>
+      <DependentUpon>Muhasebe.tt</DependentUpon>
     </Compile>
     <Compile Include="Manage_Accounts_Mdi.cs">
       <SubType>Form</SubType>
@@ -393,6 +371,21 @@
     <Compile Include="Manage_Users_Mdi.Designer.cs">
       <DependentUpon>Manage_Users_Mdi.cs</DependentUpon>
     </Compile>
+    <Compile Include="Muhasebe.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Muhasebe.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Muhasebe.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Muhasebe.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Muhasebe.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Muhasebe.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Options_Mdi.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -400,18 +393,18 @@
       <DependentUpon>Options_Mdi.cs</DependentUpon>
     </Compile>
     <Compile Include="PaymentType.cs">
-      <DependentUpon>Context.tt</DependentUpon>
+      <DependentUpon>Muhasebe.tt</DependentUpon>
     </Compile>
     <Compile Include="Product.cs">
-      <DependentUpon>Context.tt</DependentUpon>
+      <DependentUpon>Muhasebe.tt</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyReminder.cs">
-      <DependentUpon>Context.tt</DependentUpon>
+      <DependentUpon>Muhasebe.tt</DependentUpon>
     </Compile>
     <Compile Include="PropertyRemindingMethod.cs">
-      <DependentUpon>Context.tt</DependentUpon>
+      <DependentUpon>Muhasebe.tt</DependentUpon>
     </Compile>
     <Compile Include="Register_Mdi.cs">
       <SubType>Form</SubType>
@@ -421,10 +414,10 @@
     </Compile>
     <Compile Include="Scripts\AutoStarter.cs" />
     <Compile Include="UnitType.cs">
-      <DependentUpon>Context.tt</DependentUpon>
+      <DependentUpon>Muhasebe.tt</DependentUpon>
     </Compile>
     <Compile Include="User.cs">
-      <DependentUpon>Context.tt</DependentUpon>
+      <DependentUpon>Muhasebe.tt</DependentUpon>
     </Compile>
     <EmbeddedResource Include="About_Mdi.resx">
       <DependentUpon>About_Mdi.cs</DependentUpon>
@@ -554,22 +547,12 @@
     <EmbeddedResource Include="Register_Mdi.resx">
       <DependentUpon>Register_Mdi.cs</DependentUpon>
     </EmbeddedResource>
-    <EntityDeploy Include="Context.edmx">
+    <EntityDeploy Include="Muhasebe.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>Context.Designer.cs</LastGenOutput>
+      <LastGenOutput>Muhasebe.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="Context.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Context.edmx</DependentUpon>
-      <LastGenOutput>Context.Context.cs</LastGenOutput>
-    </None>
-    <None Include="Context.edmx.diagram">
-      <DependentUpon>Context.edmx</DependentUpon>
-    </None>
-    <None Include="Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Context.edmx</DependentUpon>
-      <LastGenOutput>Context.cs</LastGenOutput>
+    <None Include="Muhasebe.edmx.diagram">
+      <DependentUpon>Muhasebe.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -775,6 +758,16 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="daflanicon2.ico" />
+    <Content Include="Muhasebe.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Muhasebe.edmx</DependentUpon>
+      <LastGenOutput>Muhasebe.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Muhasebe.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Muhasebe.edmx</DependentUpon>
+      <LastGenOutput>Muhasebe.cs</LastGenOutput>
+    </Content>
     <None Include="Resources\reseller_programm.png" />
     <None Include="Resources\delete.png" />
     <None Include="Resources\pencil.png" />
@@ -808,6 +801,10 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <PropertyGroup>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
