Show stats on main

--- a/Muhasebe/App.config
+++ b/Muhasebe/App.config
@@ -47,6 +47,9 @@
       <setting name="Location" serializeAs="String">
         <value>0, 0</value>
       </setting>
+      <setting name="CanShowStatistics" serializeAs="String">
+        <value>False</value>
+      </setting>
     </Muhasebe.Properties.Settings>
   </userSettings>
   <connectionStrings><add name="MuhasebeEntities" connectionString="metadata=res://*/Muhasebe.csdl|res://*/Muhasebe.ssdl|res://*/Muhasebe.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MASHADOW-PC\SQLEXPRESS;initial catalog=Muhasebe;user id=Mashadow;password=thisis2ndtime?;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
