--- a/Muhasebe/Properties/Settings.settings
+++ b/Muhasebe/Properties/Settings.settings
@@ -23,5 +23,8 @@
     <Setting Name="Location" Type="System.Drawing.Point" Scope="User">
       <Value Profile="(Default)">0, 0</Value>
     </Setting>
+    <Setting Name="CanShowStatistics" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
