ItemGroup edit done.

--- a/Muhasebe/Muhasebe.csproj
+++ b/Muhasebe/Muhasebe.csproj
@@ -127,6 +127,12 @@
     <Compile Include="Add_Inventory_Pop.Designer.cs">
       <DependentUpon>Add_Inventory_Pop.cs</DependentUpon>
     </Compile>
+    <Compile Include="Edit_ItemGroup_Pop.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Edit_ItemGroup_Pop.Designer.cs">
+      <DependentUpon>Edit_ItemGroup_Pop.cs</DependentUpon>
+    </Compile>
     <Compile Include="Add_ItemGroup_Mdi.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -474,6 +480,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Add_Inventory_Pop.resx">
       <DependentUpon>Add_Inventory_Pop.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Edit_ItemGroup_Pop.resx">
+      <DependentUpon>Edit_ItemGroup_Pop.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Add_ItemGroup_Mdi.resx">
       <DependentUpon>Add_ItemGroup_Mdi.cs</DependentUpon>
