--- a/Muhasebe/packages.config
+++ b/Muhasebe/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
+  <package id="OpenHtmlToPdf" version="1.12.0.0" targetFramework="net45" />
 </packages>
