--- a/Muhasebe/Muhasebe.csproj
+++ b/Muhasebe/Muhasebe.csproj
@@ -316,6 +316,12 @@
       <DependentUpon>Muhasebe.tt</DependentUpon>
     </Compile>
     <Compile Include="Franchise.cs" />
+    <Compile Include="Gumplings\OrderNode_Edit_Gumpling.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Gumplings\OrderNode_Edit_Gumpling.Designer.cs">
+      <DependentUpon>OrderNode_Edit_Gumpling.cs</DependentUpon>
+    </Compile>
     <Compile Include="Income.cs">
       <DependentUpon>Muhasebe.tt</DependentUpon>
     </Compile>
@@ -590,6 +596,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Edit_User_Pop.resx">
       <DependentUpon>Edit_User_Pop.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Gumplings\OrderNode_Edit_Gumpling.resx">
+      <DependentUpon>OrderNode_Edit_Gumpling.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Manage_Accounts_Mdi.resx">
       <DependentUpon>Manage_Accounts_Mdi.cs</DependentUpon>
