--- a/Muhasebe/Muhasebe.csproj
+++ b/Muhasebe/Muhasebe.csproj
@@ -243,6 +243,12 @@
     <Compile Include="Edit_Inventory_Pop.Designer.cs">
       <DependentUpon>Edit_Inventory_Pop.cs</DependentUpon>
     </Compile>
+    <Compile Include="Edit_Order_Mdi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Edit_Order_Mdi.Designer.cs">
+      <DependentUpon>Edit_Order_Mdi.cs</DependentUpon>
+    </Compile>
     <Compile Include="Edit_Reminder_Pop.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -572,6 +578,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Edit_Inventory_Pop.resx">
       <DependentUpon>Edit_Inventory_Pop.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Edit_Order_Mdi.resx">
+      <DependentUpon>Edit_Order_Mdi.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Edit_Reminder_Pop.resx">
       <DependentUpon>Edit_Reminder_Pop.cs</DependentUpon>
