--- a/Muhasebe/Muhasebe.csproj
+++ b/Muhasebe/Muhasebe.csproj
@@ -174,6 +174,12 @@
     <Compile Include="DeviceType.cs">
       <DependentUpon>Muhasebe.tt</DependentUpon>
     </Compile>
+    <Compile Include="Edit_Account_Mdi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Edit_Account_Mdi.Designer.cs">
+      <DependentUpon>Edit_Account_Mdi.cs</DependentUpon>
+    </Compile>
     <Compile Include="Edit_BarcodeTemplate_Pop.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -545,6 +551,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Add_Order_Mdi.resx">
       <DependentUpon>Add_Order_Mdi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Edit_Account_Mdi.resx">
+      <DependentUpon>Edit_Account_Mdi.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Edit_BarcodeTemplate_Pop.resx">
       <DependentUpon>Edit_BarcodeTemplate_Pop.cs</DependentUpon>
