--- a/Muhasebe/Muhasebe.csproj
+++ b/Muhasebe/Muhasebe.csproj
@@ -165,6 +165,7 @@
     <Compile Include="ConnectionType.cs">
       <DependentUpon>Muhasebe.tt</DependentUpon>
     </Compile>
+    <Compile Include="Custom\AccountMovement.partial.cs" />
     <Compile Include="Custom\Company.partial.cs" />
     <Compile Include="Custom\Device.partial.cs" />
     <Compile Include="Custom\InvoiceNode.cs" />
