Azalan ürünler için envanter sayfasında farklı renkte gösterim ayarı, Daha fazla hareket kaydı. Versiyon yükseldi.

--- a/Muhasebe/App.config
+++ b/Muhasebe/App.config
@@ -50,6 +50,12 @@
       <setting name="CanShowStatistics" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="AlertForLowAmountItems" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="LowAmountTheresold" serializeAs="String">
+        <value>0</value>
+      </setting>
     </Muhasebe.Properties.Settings>
   </userSettings>
   <connectionStrings><add name="MuhasebeEntities" connectionString="metadata=res://*/Muhasebe.csdl|res://*/Muhasebe.ssdl|res://*/Muhasebe.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MASHADOW-PC\SQLEXPRESS;initial catalog=Muhasebe;user id=Mashadow;password=thisis2ndtime?;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
