--- a/Muhasebe/Properties/Settings.settings
+++ b/Muhasebe/Properties/Settings.settings
@@ -26,5 +26,11 @@
     <Setting Name="CanShowStatistics" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="AlertForLowAmountItems" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="LowAmountTheresold" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
