--- a/Muhasebe/Muhasebe.csproj
+++ b/Muhasebe/Muhasebe.csproj
@@ -160,6 +160,12 @@
     <Compile Include="BarcodeTemplate.cs">
       <DependentUpon>Muhasebe.tt</DependentUpon>
     </Compile>
+    <Compile Include="Buy_Item_Pop.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Buy_Item_Pop.Designer.cs">
+      <DependentUpon>Buy_Item_Pop.cs</DependentUpon>
+    </Compile>
     <Compile Include="City.cs">
       <DependentUpon>Muhasebe.tt</DependentUpon>
     </Compile>
@@ -565,6 +571,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Add_Order_Mdi.resx">
       <DependentUpon>Add_Order_Mdi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Buy_Item_Pop.resx">
+      <DependentUpon>Buy_Item_Pop.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Edit_Account_Mdi.resx">
       <DependentUpon>Edit_Account_Mdi.cs</DependentUpon>
