Alert for unpriced items, and color choosing

--- a/Muhasebe/Properties/Settings.settings
+++ b/Muhasebe/Properties/Settings.settings
@@ -32,5 +32,14 @@
     <Setting Name="LowAmountTheresold" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="LowAmountAlertColor" Type="System.Drawing.Color" Scope="User">
+      <Value Profile="(Default)">Red</Value>
+    </Setting>
+    <Setting Name="AlertForUnpricedItems" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="UnpricedAlertColor" Type="System.Drawing.Color" Scope="User">
+      <Value Profile="(Default)">Red</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
