Stock Intake discount and manual pricing

--- a/Muhasebe/Muhasebe.csproj
+++ b/Muhasebe/Muhasebe.csproj
@@ -187,6 +187,7 @@
     <Compile Include="Custom\SerialBarcodeScanner.cs" />
     <Compile Include="Custom\SerialConnectionParameters.cs" />
     <Compile Include="Custom\SerialDevice.cs" />
+    <Compile Include="Custom\StockMovementNode.cs" />
     <Compile Include="Custom\UsbConnectionParameters.cs" />
     <Compile Include="Device.cs">
       <DependentUpon>Muhasebe.tt</DependentUpon>
