--- a/Muhasebe/Muhasebe.csproj
+++ b/Muhasebe/Muhasebe.csproj
@@ -349,6 +349,12 @@
       <DependentUpon>Muhasebe.tt</DependentUpon>
     </Compile>
     <Compile Include="Franchise.cs" />
+    <Compile Include="Gumplings\Change_Prices_Gumpling.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Gumplings\Change_Prices_Gumpling.Designer.cs">
+      <DependentUpon>Change_Prices_Gumpling.cs</DependentUpon>
+    </Compile>
     <Compile Include="Gumplings\OrderNode_Edit_Gumpling.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -651,6 +657,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Edit_User_Pop.resx">
       <DependentUpon>Edit_User_Pop.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Gumplings\Change_Prices_Gumpling.resx">
+      <DependentUpon>Change_Prices_Gumpling.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Gumplings\OrderNode_Edit_Gumpling.resx">
       <DependentUpon>OrderNode_Edit_Gumpling.cs</DependentUpon>
