--- a/Muhasebe/packages.config
+++ b/Muhasebe/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AutoMapper" version="5.1.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="EntityFramework.Extended" version="6.1.0.168" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="OpenHtmlToPdf" version="1.12.0.0" targetFramework="net45" />
 </packages>
