--- a/Muhasebe/Properties/Settings.settings
+++ b/Muhasebe/Properties/Settings.settings
@@ -41,5 +41,11 @@
     <Setting Name="UnpricedAlertColor" Type="System.Drawing.Color" Scope="User">
       <Value Profile="(Default)">Red</Value>
     </Setting>
+    <Setting Name="PlaySoundOnScanned" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="SoundFileLocation" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
