--- a/Muhasebe/App.config
+++ b/Muhasebe/App.config
@@ -65,6 +65,12 @@
       <setting name="UnpricedAlertColor" serializeAs="String">
         <value>Red</value>
       </setting>
+      <setting name="PlaySoundOnScanned" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="SoundFileLocation" serializeAs="String">
+        <value />
+      </setting>
     </Muhasebe.Properties.Settings>
   </userSettings>
   <connectionStrings><add name="MuhasebeEntities" connectionString="metadata=res://*/Muhasebe.csdl|res://*/Muhasebe.ssdl|res://*/Muhasebe.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MASHADOW-PC\SQLEXPRESS;initial catalog=Muhasebe;user id=Mashadow;password=thisis2ndtime?;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
