Some fixes and Edit-Sale initial attempt.

--- a/Muhasebe/Muhasebe.csproj
+++ b/Muhasebe/Muhasebe.csproj
@@ -329,6 +329,12 @@
     <Compile Include="Edit_PaymentType_Pop.Designer.cs">
       <DependentUpon>Edit_PaymentType_Pop.cs</DependentUpon>
     </Compile>
+    <Compile Include="Edit_Sale_Mdi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Edit_Sale_Mdi.Designer.cs">
+      <DependentUpon>Edit_Sale_Mdi.cs</DependentUpon>
+    </Compile>
     <Compile Include="Edit_StockMovement_Mdi.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -671,6 +677,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Edit_PaymentType_Pop.resx">
       <DependentUpon>Edit_PaymentType_Pop.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Edit_Sale_Mdi.resx">
+      <DependentUpon>Edit_Sale_Mdi.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Edit_StockMovement_Mdi.resx">
       <DependentUpon>Edit_StockMovement_Mdi.cs</DependentUpon>
